Update optimisation, prepare for post

--- a/notebooks/3-data-cleaning-optimisation.ipynb
+++ b/notebooks/3-data-cleaning-optimisation.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Steam Data Cleaning - Optimising Cleaning the Release Date Column\n",
+    "# Steam Data Cleaning - Optimising Cleaning of the Release Date Column\n",
     "\n",
     "*This forms part of a larger series of posts for my [blog](http://nik-davis.github.io) on downloading, processing and analysing data from the steam store. [See all posts here](http://nik-davis.github.io/tag/steam).*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.18362 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Wed Jun 12 15:10:40 2019 GMT Summer Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.18362 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Mon Jun 17 14:42:41 2019 GMT Summer Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -51,7 +51,7 @@
        "OS & Windows 10 10.0.18362 SP0 \\\\ \\hline\n",
        "numpy & 1.16.3 \\\\ \\hline\n",
        "pandas & 0.24.2 \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Wed Jun 12 15:10:40 2019 GMT Summer Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Mon Jun 17 14:42:41 2019 GMT Summer Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -61,10 +61,10 @@
        "OS Windows 10 10.0.18362 SP0\n",
        "numpy 1.16.3\n",
        "pandas 0.24.2\n",
-       "Wed Jun 12 15:10:40 2019 GMT Summer Time"
+       "Mon Jun 17 14:42:41 2019 GMT Summer Time"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,11 +83,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- PELICAN_BEGIN_SUMMARY -->\n",
+    "\n",
     "In my [previous post](https://nik-davis.github.io/posts/2019/steam-data-cleaning/), we took an in-depth look at cleaning data downloaded from the Steam Store. We followed the process from start to finish, omitting just one column, which we will look at today.\n",
     "\n",
-    "The final column to clean, `release_date`, provides some interesting optimisation and learning challenges. We encountered columns with a similar structure previously, so we can use what we learned there, but now we have dates to handle.\n",
+    "The final column to clean, `release_date`, provides some interesting optimisation and learning challenges. We encountered columns with a similar structure previously, so we can use what we learned there, but now we will also have dates to handle. We're going to approach this problem with the goal of optimisation in mind - we'll start by figuring out how to solve the task, getting to the point of a functional solution, then we'll test parts of the code to see where the major slowdowns are, using this to develop a framework for improving the efficiency of the code. By iteratively testing, rewriting and rerunning sections of code, we can gradually move towards a more efficienct solution.\n",
     "\n",
-    "When cleaning the data, we wrote a `print_steam_links` function to easily create links from a dataframe. To use it again, we could copy the code and define it here, but instead we will use a handy trick in jupyter notebook. If we place the function in a separate python (.py) file inside the `src` folder, we can tell python to look there for local modules using `sys.path.append`. Then we can import the function directly, where the file name (datacleaning) is the module name, as seen below."
+    "<!-- PELICAN_END_SUMMARY -->\n",
+    "\n",
+    "## Importing Local Functions\n",
+    "\n",
+    "When cleaning the data, we wrote a `print_steam_links` function to easily create links from a dataframe. To use it again, we could copy the code and define it here, but instead we will use a handy trick in jupyter notebook. If we place the function in a separate python (.py) file inside a folder at the root of the project directory (in this case, the 'src' folder), we can tell python to look there for local modules using `sys.path.append`. Then we can import the function directly, where the file name (datacleaning) is the module name, as seen below."
    ]
   },
   {
@@ -475,8 +481,8 @@
      "text": [
       "{'coming_soon': False, 'date': '13 Jul, 2018'}    64\n",
       "{'coming_soon': False, 'date': '31 Jan, 2019'}    58\n",
-      "{'coming_soon': False, 'date': '16 Nov, 2018'}    56\n",
       "{'coming_soon': False, 'date': '5 Apr, 2016'}     56\n",
+      "{'coming_soon': False, 'date': '16 Nov, 2018'}    56\n",
       "{'coming_soon': False, 'date': '31 May, 2018'}    55\n",
       "Name: release_date, dtype: int64\n"
      ]
@@ -649,13 +655,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Initial Function Definition\n",
+    "\n",
     "Now we are ready to begin defining a function. As we only want to keep unreleased games, we first evaluate values from the `coming_soon` key, and keep only those where the value is `False`. Next we extract the release date, and set missing dates to np.nan, the default way of storing null values in pandas.\n",
     "\n",
     "Then, using the formats we learned previously, we interpret those dates using the `to_datetime` function. Once complete we pass over the dataframe once more with a general call to `to_datetime`, catching any dates we missed.\n",
     "\n",
-    "Finally we drop the columns we no longer need and return the dataframe.\n",
-    "\n",
-    "Whilst functional, the process is quite slow. We can use the `%timeit` magic to test how long it takes to run the function."
+    "Finally we drop the columns we no longer need and return the dataframe."
    ]
   },
   {
@@ -664,11 +670,72 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.59 s ± 5.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>steam_appid</th>\n",
+       "      <th>release_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2000-11-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1999-04-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>2003-05-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40</td>\n",
+       "      <td>2001-06-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50</td>\n",
+       "      <td>1999-11-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   steam_appid release_date\n",
+       "0           10   2000-11-01\n",
+       "1           20   1999-04-01\n",
+       "2           30   2003-05-01\n",
+       "3           40   2001-06-01\n",
+       "4           50   1999-11-01"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -693,18 +760,15 @@
     "    df = df.drop(['coming_soon', 'date', 'datetime'], axis=1)\n",
     "    return df\n",
     "\n",
-    "%timeit process_release_date(imported_steam_data)"
+    "result = process_release_date(imported_steam_data)\n",
+    "result[['steam_appid', 'release_date']].head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that, on average, it takes about 3.5 seconds. Whilst manageable, we could certainly benefit from optimising our code, as this could quickly add up in larger data sets, where increasing efficiency can prove invaluable.\n",
-    "\n",
-    "There are a few areas we can investigate to make improvements. When initially parsing the date, we end up calling `literal_eval` twice, which may be a source of slowdown. We also loop over the entire dataset multiple times when calling the `to_datetime` function. \n",
-    "\n",
-    "We can be pretty confident that reducing the number of traversals over the dataset will provide some gains, but first, let's find out which part is causing the greatest slowdown. Targetting the slowest part of the code and improving it will lead to the most noticeable gains, and beyond that we can tweak other parts until we're happy. As we just saw we can use the `%timeit` magic to time a function, but we can also use the built-in `time` module to easily inspect specific parts of the code."
+    "Whilst functional, the process is quite slow. The easiest way to measure the efficiency of code is by timing how long it takes to run, and that is the method we'll use here. By running this code inside of jupyter notebook, we can take advanted of IPython magics, and use the [%timeit](https://ipython.readthedocs.io/en/stable/interactive/magics.html#magic-timeit) magic to easily test how long it takes to run the function."
    ]
   },
   {
@@ -716,11 +780,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation run-time: 0.7327585220336914\n",
-      "First parse run-time: 0.005997180938720703\n",
-      "Second parse run-time: 2.8330695629119873\n",
+      "3.88 s ± 310 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit process_release_date(imported_steam_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that, on average, it takes about 3.5 seconds. Whilst manageable, we could certainly benefit from optimising our code, as this could quickly add up in larger data sets, where increasing efficiency can prove invaluable.\n",
+    "\n",
+    "There are a few areas we can investigate to make improvements. When initially parsing the date, we end up calling `literal_eval` twice, which may be a source of slowdown. We also loop over the entire dataset multiple times when calling the `to_datetime` function. \n",
+    "\n",
+    "We can be pretty confident that reducing the number of traversals over the dataset will provide some gains, but first, let's find out which part is causing the greatest slowdown. Targetting the slowest part of the code and improving it will lead to the most noticeable gains, and beyond that we can tweak other parts until we're happy. \n",
+    "\n",
+    "We just used the %timeit magic to time our function - the function is run multiple times and the average execution time is given - but we can also use the built-in `time` module of python to easily inspect specific sections of code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.08697056770324707\n"
+     ]
+    }
+   ],
+   "source": [
+    "# begin timing\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# do something\n",
+    "x = 1\n",
+    "for i in range(1000):\n",
+    "    x += 1\n",
+    "    for j in range(1000):\n",
+    "        x += 1\n",
+    "\n",
+    "# stop timing\n",
+    "end_time = time.time()\n",
+    "\n",
+    "# calculate time difference\n",
+    "execution_time = end_time - start_time\n",
+    "print(execution_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll break down the function into different sections which we think may be causing slowdown, and see which takes the longest to execute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation run-time: 0.7157635688781738\n",
+      "First parse run-time: 0.0059967041015625\n",
+      "Second parse run-time: 2.839102029800415\n",
       "\n",
-      "Total run-time: 3.5998167991638184\n"
+      "Total run-time: 3.5898571014404297\n"
      ]
     }
    ],
@@ -728,6 +861,7 @@
     "def process_release_date(df):\n",
     "    df = df.copy()\n",
     "    \n",
+    "    # first section\n",
     "    eval_start = time.time()\n",
     "    \n",
     "    df['coming_soon'] = df['release_date'].apply(lambda x: literal_eval(x)['coming_soon'])\n",
@@ -738,6 +872,7 @@
     "    \n",
     "    df.loc[df['date'] == '', 'date'] = None\n",
     "    \n",
+    "    # second section\n",
     "    first_parse_start = time.time()\n",
     "    \n",
     "    df['datetime'] = pd.to_datetime(df['date'], format='%d %b, %Y', errors='ignore')\n",
@@ -745,6 +880,7 @@
     "    \n",
     "    print('First parse run-time:', time.time() - first_parse_start)\n",
     "    \n",
+    "    # third section\n",
     "    second_parse_start = time.time()\n",
     "    \n",
     "    df['release_date'] = pd.to_datetime(df['datetime'])\n",
@@ -774,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -870,8 +1006,8 @@
      "text": [
       "Testing date parsing:\n",
       "\n",
-      "3.58 s ± 8.11 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "903 ms ± 1.38 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "3.61 s ± 54.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "993 ms ± 104 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -932,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +1080,7 @@
        "Name: release_date, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,15 +1120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "871 ms ± 50 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "806 ms ± 4.25 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "820 ms ± 7.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "792 ms ± 2.82 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1056,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1065,13 +1201,13 @@
      "text": [
       "Original method:\n",
       "\n",
-      "724 ms ± 4.72 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "709 ms ± 9.14 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "\n",
       "New methods:\n",
       "\n",
-      "376 ms ± 3.32 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "372 ms ± 681 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "361 ms ± 635 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "370 ms ± 1.07 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "366 ms ± 942 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "353 ms ± 931 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1147,14 +1283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "492 ms ± 1.09 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "481 ms ± 1.46 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1213,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1362,7 @@
        " [50, \"{'coming_soon': False, 'date': '1 Nov, 1999'}\"]]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
