Proof SteamSpy cleaning for publish

--- a/notebooks/4-data-cleaning-steamspy.ipynb
+++ b/notebooks/4-data-cleaning-steamspy.ipynb
@@ -83,11 +83,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hello and welcome back to this final part of data cleaning. Once we're finished here we'll be ready to move on to exploring and analysing the data.\n",
+    "Welcome to the final part of the data cleaning process. Once we're finished here we'll be ready to move on to exploring and analysing the data.\n",
     "\n",
     "As a quick re-cap, so far we have downloaded information on games from the Steam Store via the Steam API and SteamSpy API. We have cleaned and processed the data from the Steam API, and in this section we'll walkthrough cleaning data downloaded from the SteamSpy API. The overall goal of this project is to collect, clean and analyse data from the Steam Store with the idea of advising a fictional game developer or company.\n",
     "\n",
-    "The previous posts when into great depth about the decisions made and methods used. This post will still go over a number of decisions, but will be more in the style of a brief overview than full discussion.\n",
+    "The previous posts went into great depth about the decisions made and methods used. This post will still go over a number of decisions, but will be more in the style of a brief overview than full discussion.\n",
     "\n",
     "## Import Libraries and Inspect Data\n",
     "\n",
@@ -1969,7 +1969,7 @@
    "source": [
     "However to create the new dataframe from the tags and votes, we need to look inside the dictionaries in each row. We'll expand the logic to parse the tags using the `isintance` function to check each row for its type. If it is a dictionary, we return the dictionary. If it is a list, we'll return an empty dictionary `{}`. We'll also include an extra check in case there is anything else in the rows we haven't found yet. \n",
     "\n",
-    "Next, we loop through the tags store in `cols`, standardise the format of the new column names, then extract the vote count of each tag by checking if the tag name is in each row's dictionary of tags."
+    "Next, we loop through the tags stored in `cols`, standardise the format of the new column names, then extract the vote count of each tag by checking if the tag name is in each row's dictionary of tags."
    ]
   },
   {
@@ -4290,7 +4290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can remove, reorder and rename some rows before exporting the complete, clean dataset.\n",
+    "Finally, we can remove, reorder and rename some columns before exporting the complete, clean dataset.\n",
     "\n",
     "We'll remove the SteamSpy rows with overlap - name, languages and AppID. Next we reindex the dataframe, reordering the columns so it makes a little more logical sense to look at, and then we rename some of the columns to make it a bit clearer what they describe. \n",
     "\n",
@@ -4553,7 +4553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And with that, we have come to the end of the cleaning process. It's been a long journey and hopefully you've picked up something useful along the way, and now we can look ahead to analysing the data, creating some visualisations, and gaining some insights into the multi-billion dollar industry that is videogaming."
+    "And with that, we have come to the end of the cleaning process. It's been a long journey and hopefully you've picked up something useful along the way, and now we can look ahead to analysing the data, creating some visualisations, and gaining some insights into the multi-billion dollar industry that is video games."
    ]
   }
  ],
