Finalise changes before publish

--- a/notebooks/4-data-cleaning-steamspy.ipynb
+++ b/notebooks/4-data-cleaning-steamspy.ipynb
@@ -83,11 +83,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- PELICAN_BEGIN_SUMMARY -->\n",
+    "\n",
     "Welcome to the final part of the data cleaning process. Once we're finished here we'll be ready to move on to exploring and analysing the data.\n",
     "\n",
     "As a quick re-cap, so far we have downloaded information on games from the Steam Store via the Steam API and SteamSpy API. We have cleaned and processed the data from the Steam API, and in this section we'll walkthrough cleaning data downloaded from the SteamSpy API. The overall goal of this project is to collect, clean and analyse data from the Steam Store with the idea of advising a fictional game developer or company.\n",
     "\n",
     "The previous posts went into great depth about the decisions made and methods used. This post will still go over a number of decisions, but will be more in the style of a brief overview than full discussion.\n",
+    "\n",
+    "<!-- PELICAN_END_SUMMARY -->\n",
     "\n",
     "## Import Libraries and Inspect Data\n",
     "\n",
