--- a/notebooks/5-exploration.ipynb
+++ b/notebooks/5-exploration.ipynb
@@ -109,9 +109,6 @@
     "    Global revenues of the video game industry from 1971 to 2018, not adjusted for inflation. Source: <a href=https://en.wikipedia.org/wiki/Video_game_industry#Economics>Wikipedia</a>\n",
     "</p>\n",
     "\n",
-    "![wiki_industry](https://en.wikipedia.org/api/rest_v1/page/graph/png/Video_game_industry/0/f85d13c567f225f5e4fc8fd52f98c3f775e42591.png)\n",
-    "Global revenues of the video game industry from 1971 to 2018, not adjusted for inflation. Source: [Wikipedia](https://en.wikipedia.org/wiki/Video_game_industry#Economics)\n",
-    "\n",
     "Comparable in size to the film and music industry in the UK, and generating more than double the revenue of the film industry internationally, the video game industry is huge. Knowing how to navigate this landscape would be invaluable, so let's begin that process. In this post we'll be exploring the data, trying to make sense of it through visualisations in a process commonly referred to as [Exploratory Data Analysis](https://en.wikipedia.org/wiki/Exploratory_data_analysis) (EDA).\n",
     "\n",
     "<!-- PELICAN_END_SUMMARY -->\n",
@@ -1178,7 +1175,7 @@
     "import scipy.stats as stats\n",
     "r, p_value = stats.pearsonr(totals, avg_ratings)\n",
     "\n",
-    "# using rating_ratio\n",
+    "# using rating_ratio - pretty similar result\n",
     "# stats.pearsonr(totals, df.groupby('release_year').mean().rating_ratio.loc[2006:2018].values)\n",
     "\n",
     "print(f'Correlation coefficient (r): {r}\\np-value: {p_value}')"
